# tg-bot-v2

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
bot/: config.py  main.py
bot/database/: connection.py
bot/database/repositories/: file_repo.py  quota_repo.py
bot/handlers/: admin.py  common.py  download.py  upload.py
bot/middlewares/: auth.py
bot/models/: file_record.py
bot/tasks/: expiry_task.py
bot/utils/: file_utils.py  keyboards.py  states.py
scripts/: migrate_to_download_quota.py
